# edIt

./: CMakeLists.txt  manifest.json.in
app/: edIt.desktop.in  edIt.qml
app/components/: CloseFileDialog.qml  PageWithBottomEdge.qml  RemoveFileDialog.qml  SaveAsDialog.qml  Toolbar.qml  UnsavedDialog.qml
app/ui/: LocalFilePicker.qml  SettingsPage.qml  TabsModel.qml  TabsPage.qml  TextAreaComponent.qml
backend/: CMakeLists.txt
backend/modules/EdIt/: backend.cpp  mytype.cpp  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: com.ubuntu.developer.pawstr.edit.pot
